[gd_scene load_steps=6 format=3 uid="uid://bxgtiwlbed7lr"]

[ext_resource type="Texture2D" uid="uid://bg1i3mqtoamqv" path="res://icon.svg" id="1_de20f"]
[ext_resource type="Script" path="res://scenes/component/component.gd" id="1_otg56"]
[ext_resource type="PackedScene" uid="uid://bxucoie2xpo6k" path="res://scenes/component/snap_point/snap_point.tscn" id="2_cl3tw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0lc54"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1wpyt"]
size = Vector2(128, 128)

[node name="Component" type="RigidBody2D"]
script = ExtResource("1_otg56")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0lc54")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_de20f")

[node name="Clickable Area" type="Area2D" parent="."]
gravity_point = true
gravity_point_unit_distance = 128.0
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Clickable Area"]
shape = SubResource("RectangleShape2D_1wpyt")

[node name="SnapPoints" type="Node2D" parent="."]

[node name="RightSnapPoint" parent="SnapPoints" instance=ExtResource("2_cl3tw")]
position = Vector2(65, 0)
rotation = -1.5708

[node name="LeftSnapPoint" parent="SnapPoints" instance=ExtResource("2_cl3tw")]
position = Vector2(-65, 0)
rotation = 1.5708

[node name="TopSnapPoint" parent="SnapPoints" instance=ExtResource("2_cl3tw")]
position = Vector2(0, -65)
rotation = 3.14159

[node name="BottomSnapPoint" parent="SnapPoints" instance=ExtResource("2_cl3tw")]
position = Vector2(0, 65)

[node name="ChildComponents" type="Node2D" parent="."]

[connection signal="input_event" from="Clickable Area" to="." method="_on_area_input_event"]
